--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.6.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.7.5",
     "sequelize": "^6.21.0",
     "sequelize-cli": "^6.2.0"
   }
