--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
-    "username": "root",
-    "password": "123456789",
+    "username": "dobinh",
+    "password": "Matkhau123@",
     "database": "job_it",
-    "host": "127.0.0.1",
+    "host": "vieclamcokhi.com",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "dobinh",
+    "password": "Matkhau123@",
+    "database": "job_it",
+    "host": "vieclamcokhi.com",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "dobinh",
+    "password": "Matkhau123@",
+    "database": "job_it",
+    "host": "vieclamcokhi.com",
     "dialect": "mysql"
   }
 }
